<resources>
    <string name="app_name">LetsMeet</string>

    <string name="header_create_activity">Create an Activity</string>
    <string name="header_edit_activity">My Activity</string>
    <string name="header_join_activity">Activity</string>
    <string name="action_settings">Settings</string>
    <string name="hotButton">HOT</string>
    <string name="newButton">NEW</string>
    <string name="nearbyButton">NearBy</string>
    <string name="MEButton">ME</string>
    <string name="createButton">create</string>
    <string name="SettingButton">Settings</string>

    <string name="changeButton">Change</string>
    <string name="deleteButton">Delete</string>
    <string name="OKButton">OK</string>
    <string name="joinButton">Join</string>
    <string name="cancelButton">Cancel Meet</string>
    <string name="cancel">Cancel</string>

    <string name="ActivityName">Activity Name:</string>
    <string name="ActivityDate">Date:</string>
    <string name="ActivityLocation">Location:</string>
    <string name="ActivityPeople">Number:</string>
    <string name="ActivityType">Type:</string>
    <string name="LetsMeet">Lets Meet!</string>
    <string name="Cancel_create_activity">Cancel</string>

    <string name="hint_enter_name">   Enter the topic</string>
    <string name="hint_enter_location">   Enter an exact location</string>
    <string name="hint_enter_date">   Occurring date</string>
    <string name="hint_enter_number">   Number of participators</string>

    <string name="missingMessage">Please enter an activity name.</string>
    <string name="confirmMessage">Do you really want to delete it?</string>
    <string name="OK">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
