<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="3"
    android:columnCount="4">

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/ActivityName"
        android:layout_row="0"
        android:layout_column="0" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:id="@+id/actiNameTextView"
        android:layout_columnSpan="3"
        android:layout_gravity="fill"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/ActivityLocation"
        android:gravity="center"
        android:layout_row="1"
        android:layout_column="0" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:id="@+id/actiLocatTextView"
        android:gravity="center"
        android:layout_row="1"
        android:layout_column="1" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/ActivityDate"
        android:gravity="center"
        android:layout_row="1"
        android:layout_column="2" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:id="@+id/actiDateTextView"
        android:gravity="center"
        android:layout_row="1"
        android:layout_column="3" />

    <TextView
    android:layout_width="100dp"
    android:layout_height="30dp"
    android:text="@string/ActivityPeople"
    android:gravity="center"
    android:layout_row="2"
    android:layout_column="0" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:id="@+id/actiPeopleTextView"
        android:gravity="center"
        android:layout_row="2"
        android:layout_column="1"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/ActivityType"
        android:gravity="center"
        android:layout_row="2"
        android:layout_column="2" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:id="@+id/actiTypeTextView"
        android:gravity="center"
        android:layout_row="2"
        android:layout_column="3"/>


</GridLayout>
