<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="com.example.walter.letsmeet.MainFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:id="@+id/imageView"
            android:background="@mipmap/header_main"/>

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/imageView"
            android:rowCount="1"
            android:columnCount="3"
            android:layout_alignParentStart="true"
            android:id="@+id/gridLayout"
            android:layout_marginTop="7dp">

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/hotButton"
                android:id="@+id/HotButton"
                android:background="@mipmap/heart1"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/newButton"
                android:id="@+id/NewButton"
                android:background="@mipmap/heart2"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/nearbyButton"
                android:id="@+id/NearByButton"
                android:background="@mipmap/heart3"/>

        </GridLayout>

        <ListView
            android:layout_width="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_height="320dp"
            android:id="@android:id/list"
            android:layout_below="@+id/gridLayout"
            android:layout_centerHorizontal="true"
            android:background="@drawable/view_border" />

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:rowCount="1"
            android:columnCount="3"
            android:layout_below="@android:id/list"
            android:layout_alignParentStart="true" >

            <Button
                android:layout_marginLeft="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/MEButton"
                android:id="@+id/MEButton"
                android:background="@mipmap/icon_logo"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/createButton"
                android:id="@+id/CreateButton"
                android:background="@mipmap/write"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/SettingButton"
                android:id="@+id/SettingButton"
                android:background="@mipmap/settings"/>

        </GridLayout>

    </RelativeLayout>

</FrameLayout>
