<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.walter.letsmeet.CreateActivityFragment"
    android:orientation="vertical"
    android:id = "@+id/letsMeet">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#909"
        android:text="Create an Activity"
        android:gravity="center"
        android:textSize="35dp"/>

    <GridLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:rowCount="5"
        android:columnCount="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:text="@string/ActivityName"
            android:layout_row="0"
            android:textSize="30dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="right"
            android:id = "@+id/edit_name"
            android:hint="Please Enter the topic "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/ActivityLocation"
            android:textSize="30dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:id = "@+id/edit_location"
            android:hint="Enter the exact location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/ActivityDate"
            android:textSize="30dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:id = "@+id/edit_date"
            android:hint="Occurring Date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/ActivityPeople"
            android:textSize="30dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:id = "@+id/edit_number"
            android:hint="Number of participators"/>

    </GridLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="65dp"
        android:id="@+id/button_create"
        android:text="@string/LetsMeet"/>

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancel"
            android:layout_marginRight="45dp"
            android:layout_alignTop="@+id/button_create"
            android:layout_toEndOf="@+id/button_create"
            android:layout_marginStart="85dp"
            android:text="@string/Cancel_create_activity"/>

    </RelativeLayout>


</LinearLayout>
